@@ -1,7 +1,8 @@
 $Id$
 
-2009-07-07  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2009-07-11  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* netbeans.py: Fix netbeans.remove_bug is a string, not a boolean.
 	* gdbmi.py: Fix content of gdbmi results within quotes must be
 	unquoted.
 	* misc.py: Fix quoted command line arguments are not properly parsed.
